# SEforDS

./: .pre-commit-config.yaml  Ch06.plot_big_o.ipynb  Ch07-1.pytest.ipynb  Ch11-1.FastAPI.ipynb  Ch11-2.SDG_API.ipynb  ch07_functions.py  chapter_11_functions.py  requirements.txt  test_fit_trendline.py  test_weighted_mean.py
.github/workflows/: run-tests.yml
.ipynb_checkpoints/: Ch11-1.FastAPI-checkpoint.ipynb  Ch11-2.SDG_API-checkpoint.ipynb  chapter_11_api-checkpoint.py  plot_big_o-checkpoint.py
SE_for_DS/: pyproject.toml
