[tool.poetry]
name = "se-for-ds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "se_for_ds"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
